@@ -47,10 +47,10 @@ import org.grails.datastore.mapping.model.types.ToOne;
  */
 public class EntityFetchOptions {
 
-    private Map<String, Association> associations = new LinkedHashMap<>();
-    protected PersistentEntity entity;
-    protected Set<String> associationNames;
-    protected String propertyName;
+    private final Map<String, Association<?>> associations = new LinkedHashMap<>();
+    protected final PersistentEntity entity;
+    protected final Set<String> associationNames;
+    protected final String propertyName;
 
     private static final String JOIN = "join";
     private static final String FETCH = "fetch";
@@ -69,7 +69,7 @@ public class EntityFetchOptions {
 
     /**
      * Designed for use when a projection query is used. The fetch arguments
-     * need prepended with the projection property name.
+     * need to be prepended with the projection property name.
      *
      * @param entity The {@link PersistentEntity} being queried
      * @param projectionName The name of the property being projected
@@ -81,7 +81,7 @@ public class EntityFetchOptions {
 
         this.entity = entity;
         this.propertyName = projectionName;
-        for (Association association : entity.getAssociations()) {
+        for (Association<?> association : entity.getAssociations()) {
             associations.put(association.getName(), association);
         }
 
@@ -92,12 +92,12 @@ public class EntityFetchOptions {
      * @return The associations of the {@link PersistentEntity}. The key
      * is the property name and the value is the association.
      */
-    public Map<String, Association> getAssociations() {
+    public Map<String, Association<?>> getAssociations() {
         return associations;
     }
 
-    protected boolean isForeignKeyInChild(Association association) {
-        return association instanceof ToOne && ((ToOne) association).isForeignKeyInChild() || association instanceof ToMany;
+    protected boolean isForeignKeyInChild(Association<?> association) {
+        return association instanceof ToOne<?> toOne && toOne.isForeignKeyInChild() || association instanceof ToMany;
     }
 
     protected void handleField(String parentName, Field selectedField, Set<String> joinProperties) {
@@ -109,7 +109,7 @@ public class EntityFetchOptions {
             resolvedName = selectedField.getName();
         }
 
-        Association association = associations.get(selectedField.getName());
+        Association<?> association = associations.get(selectedField.getName());
 
         PersistentEntity entity = association.getAssociatedEntity();
 
@@ -119,14 +119,16 @@ public class EntityFetchOptions {
         }
 
         final SelectionSet set = selectedField.getSelectionSet();
+        // SelectionSet#getSelections() is declared to return a raw List<Selection> in graphql-java itself,
+        // so there's no parameterized type available to hold its result without an unchecked cast.
+        @SuppressWarnings("rawtypes")
         List<Selection> selections = (set == null ? new ArrayList<>() : set.getSelections());
 
         if (!association.isEmbedded()) {
             if (isForeignKeyInChild(association)) {
                 joinProperties.add(resolvedName);
             }
-            else if (selections.size() == 1 && selections.get(0) instanceof Field) {
-                Field field = (Field) selections.get(0);
+            else if (selections.size() == 1 && selections.getFirst() instanceof Field field) {
                 if (!entity.isIdentityName(field.getName())) {
                     joinProperties.add(resolvedName);
                 }
@@ -209,10 +211,13 @@ public class EntityFetchOptions {
      * @return The list of properties to eagerly fetch
      */
     public Set<String> getJoinProperties(DataFetchingEnvironment environment, boolean skipCollections) {
-        List<Field> fields = new ArrayList<>();
         MergedField environmentMergedField = environment.getMergedField();
 
-        if (environmentMergedField != null) {
+        List<Field> fields;
+        if (environmentMergedField == null) {
+            fields = new ArrayList<>();
+        }
+        else {
             fields = environmentMergedField
                     .getFields()
                     .stream()
@@ -232,11 +237,11 @@ public class EntityFetchOptions {
      * @param properties The properties to fetch
      * @return The fetch argument
      */
-    public Map<String, Map> getFetchArgument(Set<String> properties) {
+    public Map<String, Map<String, String>> getFetchArgument(Set<String> properties) {
         if (properties.isEmpty()) {
             return new LinkedHashMap<>();
         }
-        Map<String, Map> arguments = new LinkedHashMap<>(1);
+        Map<String, Map<String, String>> arguments = new LinkedHashMap<>(1);
         Map<String, String> joins = new LinkedHashMap<>(properties.size());
 
         for (String prop: properties) {
@@ -246,7 +251,7 @@ public class EntityFetchOptions {
         return arguments;
     }
 
-    public Map<String, Map> getFetchArgument(DataFetchingEnvironment environment) {
+    public Map<String, Map<String, String>> getFetchArgument(DataFetchingEnvironment environment) {
         return getFetchArgument(environment, false);
     }
 
@@ -260,7 +265,7 @@ public class EntityFetchOptions {
      * @param skipCollections Whether to exclude associations that are collections
      * @return The fetch argument
      */
-    public Map<String, Map> getFetchArgument(DataFetchingEnvironment environment, boolean skipCollections) {
+    public Map<String, Map<String, String>> getFetchArgument(DataFetchingEnvironment environment, boolean skipCollections) {
         return getFetchArgument(getJoinProperties(environment, skipCollections));
     }
 }
